[gd_scene load_steps=29 format=3 uid="uid://b3g7wl2wuuw1x"]

[ext_resource type="Script" path="res://Debug.gd" id="1_1xhrq"]
[ext_resource type="Script" path="res://UI_FX.gd" id="2_qs7h1"]
[ext_resource type="Script" path="res://Camera3D.gd" id="2_qvpxy"]
[ext_resource type="Script" path="res://Alien.gd" id="3_ia6ow"]
[ext_resource type="PackedScene" uid="uid://c2s7xptwu48an" path="res://Terrain/terrain_controller.tscn" id="3_uqnug"]
[ext_resource type="PackedScene" uid="uid://c1q8m4i26u6vr" path="res://alien_3.tscn" id="4_huvyo"]
[ext_resource type="Script" path="res://Cam_Target.gd" id="5_iuboh"]
[ext_resource type="Script" path="res://Area_Player-Proximity.gd" id="8_0gjb7"]
[ext_resource type="Script" path="res://Scripts/BodyPart.gd" id="10_2td36"]

[sub_resource type="BoxMesh" id="BoxMesh_war41"]
size = Vector3(1, 0.185, 70)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y1q3j"]
albedo_color = Color(1.2, 1.2, 1.2, 1)

[sub_resource type="Gradient" id="Gradient_3mo1j"]
offsets = PackedFloat32Array(0, 0.0100671, 0.345638, 0.92953)
colors = PackedColorArray(0.384314, 1, 0.360784, 0.235294, 0.384314, 1, 0.360784, 0, 0.384314, 1, 0.360784, 0, 0.384314, 1, 0.360784, 0.235294)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hsfw6"]
gradient = SubResource("Gradient_3mo1j")
fill = 1
fill_from = Vector2(0.508547, 0.551282)
fill_to = Vector2(0.24359, 0.136752)

[sub_resource type="Gradient" id="Gradient_07nq6"]
offsets = PackedFloat32Array(0, 0.0033557, 0.00671141, 1)
colors = PackedColorArray(0.384314, 0, 0, 0.686275, 0.384314, 0, 0, 0, 0.384314, 0, 0, 0.639216, 0.384314, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kjhx1"]
gradient = SubResource("Gradient_07nq6")
fill = 1
fill_from = Vector2(0.487179, 0.504274)
fill_to = Vector2(0.299145, 0.192308)
repeat = 2

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fr5e4"]
sky_top_color = Color(0, 0.533333, 0.835294, 1)
sky_horizon_color = Color(0.521569, 0.576471, 1, 1)
ground_bottom_color = Color(0.0235294, 0.203922, 0.184314, 1)
ground_horizon_color = Color(0.180392, 0.384314, 0.156863, 1)

[sub_resource type="Sky" id="Sky_bi31s"]
sky_material = SubResource("ProceduralSkyMaterial_fr5e4")

[sub_resource type="Environment" id="Environment_hole3"]
background_mode = 2
sky = SubResource("Sky_bi31s")
tonemap_mode = 3
sdfgi_enabled = true
sdfgi_read_sky_light = false
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.247059, 0.556863, 0.901961, 1)
fog_light_energy = 0.93
fog_density = 0.0014
fog_sky_affect = 0.435
fog_height = -37.92
fog_height_density = 0.2
volumetric_fog_enabled = true
volumetric_fog_density = 0.0071
volumetric_fog_albedo = Color(1, 0.643137, 0.678431, 1)
volumetric_fog_emission = Color(0, 0.168627, 0.294118, 1)
volumetric_fog_emission_energy = 9.79
volumetric_fog_gi_inject = 1.18
volumetric_fog_anisotropy = -0.53
volumetric_fog_length = 138.71
volumetric_fog_detail_spread = 1.97926
volumetric_fog_ambient_inject = 0.9

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_se27i"]
dof_blur_far_enabled = true
dof_blur_far_distance = 82.79
dof_blur_far_transition = 130.53
dof_blur_near_distance = 9.32
dof_blur_near_transition = 1140.9
dof_blur_amount = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_svwv1"]
size = Vector3(1, 1, 7.48)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_102ua"]
radius = 2.835
height = 10.262

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3kibt"]
radius = 2.367
height = 9.409

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f5maj"]
radius = 2.365
height = 12.21

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0yil0"]
radius = 1.83641
height = 18.7386

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v6wbe"]
radius = 1.901
height = 17.822

[sub_resource type="SphereShape3D" id="SphereShape3D_ukq6r"]
radius = 10.0

[sub_resource type="ViewportTexture" id="ViewportTexture_56ims"]
viewport_path = NodePath("HP_Head/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_vy0mc"]
viewport_path = NodePath("HP_Empathy/SubViewport")

[node name="Main Scene" type="Node3D"]

[node name="POS_Furthest-Spawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.431, -130)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="POS_Furthest-Spawn"]
mesh = SubResource("BoxMesh_war41")
surface_material_override/0 = SubResource("StandardMaterial3D_y1q3j")

[node name="POS_Highest" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, -130)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="POS_Highest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08253, 94.9054)
mesh = SubResource("BoxMesh_war41")
surface_material_override/0 = SubResource("StandardMaterial3D_y1q3j")

[node name="POS_Furthest-Attack-Area" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.431, -50)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="POS_Furthest-Attack-Area"]
mesh = SubResource("BoxMesh_war41")

[node name="POS_Furthest-Player-Area" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.431, -10)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="POS_Furthest-Player-Area"]
mesh = SubResource("BoxMesh_war41")

[node name="Debug" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1xhrq")

[node name="Label_Hide-Hp" type="Label" parent="Debug"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 30
text = "Hide Hit Points"

[node name="UI_FX" type="Control" parent="." node_paths=PackedStringArray("limb_damage_flash", "head_damage_flash", "empathy_damage_flash", "timer_fx_flash")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_qs7h1")
limb_damage_flash = NodePath("Dmg_Limb_BG")
head_damage_flash = NodePath("Dmg_Head_BG")
empathy_damage_flash = NodePath("Dmg_Empathy_BG")
timer_fx_flash = NodePath("Timer_FX_Flash")

[node name="Dmg_Limb_BG" type="TextureRect" parent="UI_FX"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_hsfw6")

[node name="Dmg_Head_BG" type="TextureRect" parent="UI_FX"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_kjhx1")

[node name="Dmg_Empathy_BG" type="TextureRect" parent="UI_FX"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_kjhx1")

[node name="Timer_FX_Flash" type="Timer" parent="UI_FX"]
unique_name_in_owner = true
wait_time = 0.1

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.97975, 0.171625, -0.103123, 0.0588403, 0.245498, 0.96761, 0.191382, -0.954084, 0.230429, -3.30014, 12.6945, 4.53443)
shadow_enabled = true
shadow_opacity = 0.82
shadow_blur = 2.599

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hole3")

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("cam_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.43187e-05, 0.012094, -0.000411987)
attributes = SubResource("CameraAttributesPractical_se27i")
doppler_tracking = 2
current = true
fov = 21.0
size = 5.0
near = 0.214
far = 1000.0
script = ExtResource("2_qvpxy")
cam_target = NodePath("../Player/Cam_Target")

[node name="TerrainController" parent="." instance=ExtResource("3_uqnug")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.74317)

[node name="Player" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
axis_lock_linear_z = true
script = ExtResource("3_ia6ow")

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="Player"]
avoidance_enabled = false
height = 2.2
vertices = PackedVector3Array(1.644, 0, -1.69, -1.264, 0, -1.601, -1.461, 0, 1.345, 1.714, 0, 1.251)
avoidance_layers = 32768

[node name="Cam_Target" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.982935, 0.183951, 0, -0.183951, 0.982935, 0.228, 3, 5.50001)
script = ExtResource("5_iuboh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/Cam_Target"]
visible = false
mesh = SubResource("BoxMesh_svwv1")

[node name="DetectionAreas" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.414648, 0, -0.00475604)

[node name="Area_Head" type="Area3D" parent="Player/DetectionAreas" node_paths=PackedStringArray("is_head", "player", "collision", "collision_area")]
unique_name_in_owner = true
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.358542, 1.26877, -0.0011203)
collision_layer = 32768
collision_mask = 4
script = ExtResource("10_2td36")
is_head = NodePath(".")
player = NodePath("../..")
collision = NodePath("../../Collision_AlienBody")
collision_area = NodePath("CollisionA_AlienBody")

[node name="CollisionA_AlienBody" type="CollisionShape3D" parent="Player/DetectionAreas/Area_Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.669039, 2.20307, 1.86489)
shape = SubResource("CapsuleShape3D_102ua")

[node name="Timer_Limb_Dmg_Flash" type="Timer" parent="Player/DetectionAreas/Area_Head"]

[node name="Area_LegR" type="Area3D" parent="Player/DetectionAreas" node_paths=PackedStringArray("player", "collision", "collision_area")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.375994, 0, 1.86265e-09)
collision_layer = 32768
collision_mask = 4
script = ExtResource("10_2td36")
player = NodePath("../..")
collision = NodePath("../../Collision_LegRight")
collision_area = NodePath("CollisionA_LegRight")
is_part = 1

[node name="CollisionA_LegRight" type="CollisionShape3D" parent="Player/DetectionAreas/Area_LegR"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.354678, 0.465157, 0.185392)
shape = SubResource("CapsuleShape3D_3kibt")

[node name="Timer_Limb_Dmg_Flash" type="Timer" parent="Player/DetectionAreas/Area_LegR"]

[node name="Area_LegL" type="Area3D" parent="Player/DetectionAreas" node_paths=PackedStringArray("player", "collision", "collision_area")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.375994, 0, 0)
collision_layer = 32768
collision_mask = 4
script = ExtResource("10_2td36")
player = NodePath("../..")
collision = NodePath("../../Collision_LegLeft")
collision_area = NodePath("CollisionA_LegLeft")
is_part = 2

[node name="CollisionA_LegLeft" type="CollisionShape3D" parent="Player/DetectionAreas/Area_LegL"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.328862, 0.441083, 0.0353434)
shape = SubResource("CapsuleShape3D_f5maj")

[node name="Timer_Limb_Dmg_Flash" type="Timer" parent="Player/DetectionAreas/Area_LegL"]

[node name="Area_ArmR" type="Area3D" parent="Player/DetectionAreas" node_paths=PackedStringArray("player", "collision", "collision_area")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.375994, 0, 0)
collision_layer = 32768
collision_mask = 4
script = ExtResource("10_2td36")
player = NodePath("../..")
collision = NodePath("../../Collision_ArmRight")
collision_area = NodePath("CollisionA_ArmRight")
is_part = 3

[node name="CollisionA_ArmRight" type="CollisionShape3D" parent="Player/DetectionAreas/Area_ArmR"]
transform = Transform3D(0.0959294, -0.0282334, -0.00065124, -0.000468328, -0.0038961, 0.099923, -0.028237, -0.0958525, -0.00386973, 0.222895, 1.25142, -0.735707)
shape = SubResource("CapsuleShape3D_0yil0")

[node name="Timer_Limb_Dmg_Flash" type="Timer" parent="Player/DetectionAreas/Area_ArmR"]

[node name="Area_ArmL" type="Area3D" parent="Player/DetectionAreas" node_paths=PackedStringArray("player", "collision", "collision_area")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.375994, 0, 0)
collision_layer = 32768
collision_mask = 4
script = ExtResource("10_2td36")
player = NodePath("../..")
collision = NodePath("../../Collision_ArmLeft")
collision_area = NodePath("CollisionA_ArmLeft")
is_part = 4

[node name="CollisionA_ArmLeft" type="CollisionShape3D" parent="Player/DetectionAreas/Area_ArmL"]
transform = Transform3D(0.0981955, -0.0188975, -0.000720685, 2.24717e-12, -0.00381088, 0.0999274, -0.0189113, -0.0981243, -0.00374211, -0.678474, 1.34599, -0.666391)
shape = SubResource("CapsuleShape3D_v6wbe")

[node name="Timer_Limb_Dmg_Flash" type="Timer" parent="Player/DetectionAreas/Area_ArmL"]

[node name="Area_Player-Proximity" type="Area3D" parent="Player/DetectionAreas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 2
script = ExtResource("8_0gjb7")

[node name="Collision_Copter-Proximity" type="CollisionShape3D" parent="Player/DetectionAreas/Area_Player-Proximity"]
shape = SubResource("SphereShape3D_ukq6r")

[node name="Alien" parent="Player" instance=ExtResource("4_huvyo")]
transform = Transform3D(1, 0.00048692, 0.000306956, -0.000486927, 1, 2.02796e-05, -0.000306949, -2.04407e-05, 1, 0, 0, 0)

[node name="HP_Head" parent="Player/Alien" index="1"]
texture = SubResource("ViewportTexture_56ims")

[node name="HP_Empathy" parent="Player/Alien" index="2"]
texture = SubResource("ViewportTexture_vy0mc")

[node name="Skeleton3D" parent="Player/Alien/Armature" index="0"]
transform = Transform3D(1, -3.63798e-11, 2.91038e-11, 1.45519e-11, 0.999999, 0, 0, -2.98023e-08, 1, -0.0336967, 0.021865, -0.0172729)

[node name="Collision_LegRight" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.354678, 0.486024, 0.185392)
shape = SubResource("CapsuleShape3D_3kibt")

[node name="Collision_LegLeft" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.328862, 0.61232, 0.0353434)
shape = SubResource("CapsuleShape3D_f5maj")

[node name="Collision_ArmLeft" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.0981955, -0.0188975, -0.000720685, 2.24717e-12, -0.00381088, 0.0999274, -0.0189113, -0.0981243, -0.00374211, -0.684957, 1.35585, -0.666911)
shape = SubResource("CapsuleShape3D_v6wbe")
disabled = true

[node name="Collision_ArmRight" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.0959294, -0.0282334, -0.00065124, -0.000468328, -0.0038961, 0.099923, -0.028237, -0.0958525, -0.00386973, 0.222895, 1.25142, -0.735707)
shape = SubResource("CapsuleShape3D_0yil0")
disabled = true

[node name="Collision_AlienBody" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.0126971, 1.48907, 0.180266)
shape = SubResource("CapsuleShape3D_102ua")

[connection signal="timeout" from="UI_FX/Timer_FX_Flash" to="UI_FX" method="_on_timer_fx_flash_timeout"]

[editable path="Player/Alien"]
[editable path="Player/Alien/HP_Head/SubViewport/HP_Bar"]
[editable path="Player/Alien/HP_Empathy/SubViewport/HP_Bar"]
